force-app/main/default/objects/Notification_Settings__c/Notification_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Notification Settings</label>
</CustomObject>