force-app/main/default/objects/Notification_Settings__c/fields/AllowSoqlFallback__c.field-meta.xml
<CustomField>
    <fullName>AllowSoqlFallback__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow SOQL Fallback</label>
    <type>Checkbox</type>
</CustomField>