force-app/main/default/objects/Notification_Settings__c/fields/SlackPath__c.field-meta.xml
<CustomField>
    <fullName>SlackPath__c</fullName>
    <label>Slack Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>