force-app/main/default/objects/Notification_Settings__c/fields/UseReposOnly__c.field-meta.xml
<CustomField>
    <fullName>UseReposOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Repositories Only</label>
    <type>Checkbox</type>
</CustomField>