force-app/main/default/objects/Notification_Settings__c/fields/WebhookPath__c.field-meta.xml
<CustomField>
    <fullName>WebhookPath__c</fullName>
    <label>Webhook Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>